# uv

crates/uv-cli/src/: lib.rs
crates/uv-dispatch/src/: lib.rs
crates/uv-resolver/src/: error.rs  lib.rs
crates/uv-resolver/src/lock/: mod.rs  target.rs
crates/uv-resolver/src/pubgrub/: package.rs  report.rs
crates/uv-resolver/src/resolver/: environment.rs  mod.rs
crates/uv-workspace/src/: lib.rs  workspace.rs
crates/uv/src/: lib.rs  settings.rs
crates/uv/src/commands/: build_frontend.rs
crates/uv/src/commands/project/: add.rs  export.rs  mod.rs  run.rs  sync.rs  target.rs
crates/uv/tests/it/: branching_urls.rs  export.rs  pip_compile.rs  pip_install.rs  run.rs  sync.rs
docs/configuration/: indexes.md
docs/reference/: cli.md
foo/: pyproject.toml
foo/bar/: pyproject.toml
foo/bar/src/bar/: __init__.py
foo/src/foo/: __init__.py
