[project]
name = "bar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.6.2.post1",
]

[project.scripts]
bar = "bar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
